[package]
name = "todo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
num_cpus = "1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.44"
serde_derive = "1.0.104"
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
tokio-stream = "0.1.10"
log="0.4.8"
env_logger="0.9.0"
chrono = { version = "0.4.10", features = ["serde"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
diesel = {version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07"]}
actix = "0.11.0"
actix-rt = "2.2" # <-- Runtime for actix
diesel_migrations = "1.4.0"
bcrypt = "0.13"
actix-service = "2.0.2"
regex = "1.3.4"
jsonwebtokens = "1.0.0-alpha.12"

[dev-dependencies]
bytes="0.5.3"
regex = "1.3.4"

[features]
dynamo = []
db-test = []