[package]
name = "todo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
num_cpus = "1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.44"
serde_derive = "1.0.104"
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
tokio-stream = "0.1.10"
log="0.4.8"
env_logger="0.9.0"
actix = "0.11.0"
actix-rt = "2.2" # <-- Runtime for actix
actix-service = "2.0.2"
bcrypt = "0.13"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = {version = "2.0.2", features = ["chrono", "postgres", "r2d2", "uuid"]}
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
futures = "0.3"
jsonwebtokens = "1.2.0"
r2d2 = "0.8.10"
regex = "1.3.4"

[dev-dependencies]
bytes="0.5.3"
regex = "1.3.4"

[features]
dynamo = []
db-test = []